[dmsimard] Add rdo-core group to project access

--- a/project.config
+++ b/project.config
@@ -2,19 +2,24 @@
 	description = Packaging content for openstack/muranoclient (distgit)
 [access "refs/*"]
   read = group openstack/muranoclient-distgit-core
+  read = group rdo-core
   owner = group openstack/muranoclient-distgit-ptl
 [access "refs/heads/*"]
 	label-Code-Review = -2..+2 group openstack/muranoclient-distgit-core
+	label-Code-Review = -2..+2 group rdo-core
 	label-Code-Review = -2..+2 group openstack/muranoclient-distgit-ptl
 	label-Verified = -2..+2 group openstack/muranoclient-distgit-ptl
 	label-Workflow = -1..+1 group openstack/muranoclient-distgit-core
+	label-Workflow = -1..+1 group rdo-core
 	label-Workflow = -1..+1 group openstack/muranoclient-distgit-ptl
 	label-Workflow = -1..+0 group Registered Users
 	submit = group openstack/muranoclient-distgit-ptl
 	read = group openstack/muranoclient-distgit-core
+	read = group rdo-core
     read = group Registered Users
 [access "refs/meta/config"]
     read = group openstack/muranoclient-distgit-core
+    read = group rdo-core
     read = group Registered Users
 [receive]
 	requireChangeId = true
