--- a/project.config
+++ b/project.config
@@ -1,28 +1,27 @@
 [project]
-	description = Packaging content for openstack/muranoclient (distgit)
 [access "refs/*"]
   read = group openstack/muranoclient-distgit-core
   read = group rdo-core
   owner = group openstack/muranoclient-distgit-ptl
 [access "refs/heads/*"]
 	label-Code-Review = -2..+2 group openstack/muranoclient-distgit-core
-	label-Code-Review = -2..+2 group rdo-core
 	label-Code-Review = -2..+2 group openstack/muranoclient-distgit-ptl
+	label-Code-Review = -2..+2 group rdo-core
 	label-Verified = -2..+2 group openstack/muranoclient-distgit-ptl
 	label-Workflow = -1..+1 group openstack/muranoclient-distgit-core
-	label-Workflow = -1..+1 group rdo-core
 	label-Workflow = -1..+1 group openstack/muranoclient-distgit-ptl
+	label-Workflow = -1..+1 group rdo-core
 	label-Workflow = -1..+0 group Registered Users
 	submit = group openstack/muranoclient-distgit-ptl
+	read = group Registered Users
 	read = group openstack/muranoclient-distgit-core
-	read = group rdo-core
-    read = group Registered Users
+    read = group rdo-core
 [access "refs/meta/config"]
+    read = group Registered Users
     read = group openstack/muranoclient-distgit-core
     read = group rdo-core
-    read = group Registered Users
 [receive]
 	requireChangeId = true
 [submit]
 	mergeContent = false
-	action = fast forward only
+	action = rebase if necessary
